# Kronos_for_Alpha

./: .gitignore  .importlinter  .pre-commit-config.yaml  AGENTS.md  Makefile  pyproject.toml  pyrightconfig.json
.githooks/: commit-msg
.opencode/: PLAN.md  config.json  permissions.json
.opencode/agents/: grace-orchestrator.md  grace-worker.md
.opencode/tools/: registry.ts
config/: global.yaml
docs/: architecture.md  development-plan.xml  knowledge-graph.xml  module-contracts.md  operational-packets.xml  requirements.xml  technology.xml  verification-plan.xml
docs/conventions/: cli.md  commit.md
docs/grace/: development-plan.xml  knowledge-graph.xml  operational-packets.xml  requirements.xml  technology.xml  verification-plan.xml
docs/operations/: failures.md
docs/reports/: audit.md  implementation.md  metrics.md  skeleton.md  strategies.md
scripts/: align_predictions.py  audit_grace_coverage.py  extract_ticker.py  fetch_1h.py  grace-full-refresh.sh  modal_inference.py  preprocess_1h.py  setup_hf_token.py
src/cli/: backtest.py  compare.py
src/core/: registry.py
src/core/kronos/: model.py  modules.py  predictor.py  tokenizer.py
src/data/: base.py  cache.py  fetcher.py  loader_sber.py
src/evaluation/: calibrate.py  engine.py  evaluate.py  metrics.py  output.py  quarterly.py  regime.py  simulation.py  walk_forward.py
src/signals/: __init__.py  atoms.py  bars.py  bollinger.py  divergence.py  filters.py  fractal.py  ict.py  volatility.py  vwap.py
src/strategies/: __init__.py  core.py  registry.json  registry.py  s01_bb.py  s02_bb_mr.py  s05_bb_breakout.py  s20_ob.py  s28_vol_ob.py  s34_vwap_ob.py  s38_lowvol_ob.py  vanilla.py
src/strategies/pending/: __init__.py  core.py  s01_bb.py  s02_bb_mr.py  s05_bb_breakout.py  s20_ob.py  s28_vol_ob.py  s34_vwap_ob.py  s38_lowvol_ob.py  vanilla.py
src/strategies/verified/: __init__.py  s01_wf.py  s02_bb_pct.py  s03_bb_mom.py  s04_bb_rollwr.py
templates/scripts/: backtest_sber_quantile.py  backtest_sber_v2.py  compare_confidence_filter.py  explore_belief.py  fetch_sber.py  run_backtest.py  run_sber.py
templates/strategies/: bb_pure_ablation.py  s13_consensus_bounded.py  s5_path_dispersion.py  test_fractal.py  test_fractals_sweep.py
templates/sweeps/: sweep_adv.py  sweep_authors.py  sweep_bars.py  sweep_config.yaml  sweep_consensus.py  sweep_fvg.py  sweep_hour5.py  sweep_hour_dist.py  sweep_ict.py  sweep_master.py  sweep_ob.py  sweep_smc.py  sweep_temporal.py  sweep_tpsl.py  sweep_tpsl_params.py  sweep_vol.py  sweep_vwap.py
