[build-system]
requires = ["setuptools>=75.8", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "kronos-alpha"
version = "0.1.0"
description = "Alpha discovery pipeline — Kronos transformer fine-tune + inference + backtesting for MOEX financial assets"
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Kronos Alpha Team"}]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pyarrow>=14.0.0",
    "scipy>=1.12.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "apimoex>=1.5.0",
    "einops>=0.8.0",
    "safetensors>=0.4.0",
    "huggingface_hub>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.8.0",
    "pyright>=1.1.370",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
modal = ["modal>=0.64.0"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["templates", "data", "checkpoints", ".venv", "notebooks"]

[tool.ruff.lint]
select = [
    "F",    # Pyflakes
    "E",    # Pycodestyle errors
    "W",    # Pycodestyle warnings
    "I",    # Isort
    "N",    # PEP8 naming
    "UP",   # Pyupgrade
    "B",    # Flake8-bugbear
    "SIM",  # Simplify
    "RUF",  # Ruff-specific
    "C4",   # Comprehensions
    "TCH",  # Type-checking imports
]
ignore = [
    "E402",   # imports after module docstring (M-XXX headers intentional)
    "E501",   # line too long
    "E702",   # semicolons — intentional simulation loop style
    "E741",   # single-letter variables (l, O, I) — from ported code
    "B008",   # function call in defaults
    "B905",   # zip without strict — py<3.10 compat
    "N806",   # lowercase variable names — ported code convention
    "N803",   # uppercase argument names — math convention (T, S, N)
    "SIM102", # collapsible if
    "SIM108", # ternary
    "SIM101", # duplicate isinstance
    "SIM118", # in dict.keys()
    "F541",   # f-string without placeholders
    "F841",   # unused variables — ported code
    "RUF001", # ambiguous unicode in strings
    "RUF002", # ambiguous unicode in docstrings
    "RUF005", # collection literal concatenation
    "RUF059", # unused unpacked variables — ported code
    "N812",   # lowercase imported as non-lowercase — torch F convention
    "RUF015", # next(iter()) — minor optimization
]
fixable = ["I", "UP", "F401", "W293"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-single-line = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true
exclude = ["templates/", "data/", "checkpoints/", "notebooks/"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short --cov=src --cov-report=term-missing"
